# mlb-analytics-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.txt  INSTALL_BBE_FIX.txt  INSTALL_CALIBRATION_SCORE_RELIABILITY.txt  INSTALL_DASHBOARD_CHEATSHEET.txt  INSTALL_PHASE1.txt  INSTALL_PHASE2_STATCAST_SCORES.txt  INSTALL_PITCH_MATCHUPS_VALIDATED_SIGNALS.txt  LICENSE  MONEYLINE_DEPLOYMENT.md  Procfile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: daily-sync.yml  tests.yml
.streamlit/: config.toml
app/: Home.py  home_old.py
app/pages/: 1_Backfill.py  2_Model_Lab.py  3_Data_Quality.py  4_Calibration.py  5_Best_Bets.py  6_Data_Sources.py  7_Cheat_Sheet.py
data/: mlb_analytics.db  reliability_snapshot.json
mlb-phase1-odds-no-statcast/: .env.example  INSTALL.txt
mlb-phase1-odds-no-statcast/src/mlb_analytics/: config.py
mlb-phase1-odds-no-statcast/tests/: test_odds_api.py
scripts/: backfill.py  train_models.py
src/mlb_analytics/: config.py
src/mlb_analytics/data/: http.py  mlb_api.py  odds_api.py  parsers.py  repository.py  statcast.py  venues.py  weather.py
src/mlb_analytics/evaluation/: __init__.py  cheatsheet.py  reliability.py
src/mlb_analytics/features/: game_features.py  pitch_matchups.py  player_features.py  scores.py  (+2 more)
src/mlb_github_streamlit_analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cheatsheet.py  test_features.py  test_odds_api.py  test_parsers.py  test_pitch_matchups.py  test_reliability.py  test_scores.py  test_statcast.py  test_validated_signals.py
(+5 files in other folders)
